<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="@dimen/dp_4"
    app:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_profile_completed"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:minWidth="@dimen/dp_50"
                android:minHeight="@dimen/dp_50"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_profile_progress"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ic_big_notif_customerapp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/circular_progress_bar"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_affiliate_byme"
                android:layout_width="@dimen/dp_16"
                android:layout_height="@dimen/dp_16"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_toRightOf="@+id/image_profile_progress"
                android:clickable="false"
                android:focusable="false"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_byme_blue" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginLeft="@dimen/dp_4"
                android:layout_toRightOf="@+id/ic_affiliate_byme"
                android:maxLines="1"
                android:text="Young Lex Le Bron James Syaiful Amir Hutagalung"
                app:layout_goneMarginStart="@dimen/dp_16" />

            <TextView
                android:id="@+id/text_profile_completion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_username"
                android:layout_toRightOf="@id/ic_affiliate_byme"
                android:text="Kelengkapan Profile 75%"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/by_me_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/bg_button_white_border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/curate_product_by_me"
            android:textColor="@color/black_38"
            android:textSize="@dimen/sp_11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_tokopoint"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_tokopoint" />

                <TextView
                    android:id="@+id/label_tokopoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/image_tokopoint"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/label_user_tokopoint" />

                <TextView
                    android:id="@+id/text_tokopoint_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_tokopoint"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/image_tokopoint"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="50.000 pt" />
            </RelativeLayout>


            <View
                android:id="@+id/divider"
                android:layout_width="0.5dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:background="@color/white_two" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/image_voucher"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="false"
                    android:focusable="false"
                    app:srcCompat="@drawable/ic_account_voucher" />

                <TextView
                    android:id="@+id/label_voucher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_toRightOf="@id/image_voucher"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/label_user_voucher" />

                <TextView
                    android:id="@+id/text_voucher_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_voucher"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/image_voucher"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/label_tokopoint_see_voucher" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="Transaksi"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_menu_waiting_for_payment" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_menu_waiting_for_payment" />

        <View
            android:id="@+id/divider_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/white_two" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/title_menu_other_transaction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_go_to_payment"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_big_notif_customerapp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_big_notif_customerapp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_big_notif_customerapp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_big_notif_customerapp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
</androidx.cardview.widget.CardView>